dark mode issue fix table and card .

--- a/invoice-frontend/src/app/pages/components/dashboard/dashboard-invoice-list/dashboard-invoice-list.component.scss
+++ b/invoice-frontend/src/app/pages/components/dashboard/dashboard-invoice-list/dashboard-invoice-list.component.scss
@@ -94,3 +94,10 @@
 .inner-search-bar {
     width: 90%;
 }
+
+.table-responsive {
+    display: block;
+    width: 100%;
+    overflow-x: unset !important;
+    -webkit-overflow-scrolling: touch;
+}
