--- a/invoice-frontend/src/app/pages/components/invoice/invoice.component.scss
+++ b/invoice-frontend/src/app/pages/components/invoice/invoice.component.scss
@@ -643,3 +643,10 @@
 .dropdown {
     height: 25px;
 }
+
+.table-responsive {
+    display: block;
+    width: 100%;
+    overflow-x: unset !important;
+    -webkit-overflow-scrolling: touch;
+}
